2015-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Added for Travis Continuous Integration, but for now
	exclude r-cran-rcppoctave which is currently uninstallable
	* tests/test_kfpredict.R: Now conditional on R
	* tests/test_kfupdate.R: Idem
	* tests/test_ltidisc.R: Idem
	* tests/test_rtssmooth.R: Idem
	* tests/test_tfsmooth.R: Idem

2015-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/tfsmooth.cpp: Added roxygen code for manual page
	* src/kfpredict.cpp: Idem
	* src/ltidisc.cpp: Idem
	* src/kfupdate.cpp: Added roxygen code, updated interface
	* src/rtssmooth.cpp: Idem
	* src/tfsmooth.cpp: Idem
	* src/rtssmooth.cpp: Use \dQuote{} and \sQuote{}

2015-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Return the cube P in result list, correct indexing,
	revert to const arguments
	* src/kfupdate.cpp: Revert to const first two arguments
	* src/tfsmooth.cpp: Ditto

2015-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/kfupdate.cpp: Non-const first two arguments, returning m and P

	* src/tfsmooth.cpp: Non-const first two arguments, returning m and P;
	correction in use of y argument

	* demo/kf_cwpa_demo.R: Corrections, temporal input from file, and two
	more plots

2015-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/tfsmooth.cpp: First complete version

2015-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/rtssmooth.cpp: Use automatic as<Cube> converter recently added
	to RcppArmadillo

	* tests/test_rtssmooth.R: Corresponding update

2014-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5 with initial repo commit
