@@ -1,3 +1,10 @@
+2015-12-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Updated, added CWPA demo gifs
+
+	* demo/kf_cwpa_demo.R: Finished with animated sequence plots
+	* demo/kf_sine_demo.R: Updated to Cube use in smoother too
+
 2015-12-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Added for Travis Continuous Integration, but for now
